--- a/css/responsive.css
+++ b/css/responsive.css
@@ -4,6 +4,7 @@
 	}
 	.header {
 		width: 100%;
+    height: 60px;
 		padding: 0px;
 		float: left;
 	}
@@ -12,39 +13,60 @@
 		font-size: 15px;
 		padding-left: 10px;
 	}
+  .header a{
+
+  }
 	nav {
 		display: none;
 		position: absolute;
-  		background-color: #f1f1f1;
-  		width: 80%;
-  		left: 0;
-  		right: 0;
-  		overflow: auto;
-  		margin: 20px 10px 0px 0px;
-  		box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  		z-index: 1;
+  	background-color: #f1f1f1;
+  	width: 100%;
+  	left: 0;
+  	right: 0;
+    top: 10px;
+  	overflow: auto;
+  	margin: 20px 0px 0px 0px;
+  	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  	z-index: 1;
 	}
-	nav a {
-  	color: black;
+	#nav-list a {
   	padding: 12px 16px;
   	text-decoration: none;
   	display: block;
+    color: black;
 	}
 	.burger {
 		width: 30px;
-		margin: 10px;
+		margin: 15px;
 	}
 	.burger div {
-		width: 20px; 
+		width: 30px;
+    height: 6px;
+    margin-top: 2px;
+    background-color: white;
 	}
 	.content {
   width: 100%;
   height: 250px;
   float: left;
-  background-image: url(../images/city.jpg);
-  background-size: cover;
+}
+.content .col {
+  width: 40%;
+  float: left;
 }
 
+.col p {
+  line-height: 30px;
+  text-align: center;
+  font-size: 15px;
+  padding: 10px;
+  margin-top: 0px;
+  background-color: grey;
+  opacity: 0.8;
+}
+.col-2 form {
+  display: none;
+}
 .sec-one {
   width: 90%;
   margin:  5%;
@@ -69,15 +91,13 @@ article {
 article .company-type {
   width: 100%;
   float: left;
-  font-family: Times New Roman;
   color:  #006080;
 }
 article .company-type .headline {
   width: 100%;
-  height: 50px;
-  background-color:  #00131a;
+  height: 80px;
   float: left;
-  font-size: 16px;
+  font-size: 18px;
   color: white;
   text-align: center;
 }
@@ -87,7 +107,7 @@ article .company-type .para1 {
   margin: 0;
   font-size: 16px;
   background-color: white;
-
+  padding: 0;
 }
 article .company-type .para2 {
   float: left;
@@ -95,73 +115,49 @@ article .company-type .para2 {
   margin: 0;
   font-size: 16px;
   background-color: white;
+  padding: 0;
 }
 article h6 {
   font-size: 18px;
-  padding-left: 25px;
+  padding-left: 2px;
   font-family: verdana, sans-serif;
 
+}
+.section {
+  width: 100%;
+  float: left;
+  background-color: #4CAF50;
+}
+.section #rec {
+  width: 100%;
+  height: 350px;
+  margin: 20px auto 20px 0;
+  float: left;
+}
+.section #rec .round {
+  width: 150px;
+  height: 150px;
+  margin: 0px 30%;
+  border: solid white;
+  border-radius: 50%;
+}
+.section p {
+  text-align: center;
+  padding: 20px;
+  line-height: 25px;
+  color: white;
 }
 section {
       width: 90%;
       float: left;
-      margin: 2.5%;
+      margin: 5%;
       color: white;
       background-color: black;
       opacity: 0.8;
-      padding: 10px;
+      padding: 2px;
       letter-spacing: 2px;
     }
-.contact {
-  width: 100%;
-  float: left;
-  background-color: #00131a;
-  color: white;
-}
-.contact .left {
-  width: 100%;
-  height: 600px;
-  float: left;
-}
-.left img {
-  width: 90%;
-  height: 50%;
-  margin: 5%;
-  object-fit: contain;
-}
-.left p {
-  line-height: 30px;
-  padding: 20px;
-  font-family: 'Times New Roman', sans-serif;
-}
-.contact .right {
-  width: 90%;
-  float: left;
-  margin: 5%;
-}
-.contact input[type=text], select, textarea {
-  width: 100%;
-  padding: 12px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-  margin-top: 6px;
-  margin-bottom: 16px;
-  resize: vertical;
-}
 
-.contact input[type=submit] {
-  background-color: #4CAF50;
-  color: white;
-  padding: 12px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-.contact input[type=submit]:hover {
-  background-color: #45a049;
-}
 .head {
   width: 100%;
   height: 100px;
@@ -240,12 +236,61 @@ section {
 }
 footer {
   width: 100%;
-  height: 50px;
   float: left;
-  background-color: #00131a;
-  border-top: solid thin white;
+  background-color: #102223;
+  border-top: solid 1px grey;
   text-align: center;
   color: white;
-  font-size: 13px;
+  font-size: 17px;
+}
+footer .footer-nav {
+  width: 100%;
+  height: 300px;
+  float: left;
+  border-right: solid thin grey;
+}
+footer .footer-nav a {
+  text-decoration: none;
+  display: block;
+  text-align: left;
+  padding: 20px;
+  color: white;
+  font-size: 17px;
+}
+footer .social-media {
+  width: 100%;
+  height: 300px;
+  float: left;
+  border-right: solid thin grey;
+}
+footer .contact {
+  width: 100%;
+  height: 300px;
+  float: right;
+  color: white;
+}
+
+footer .contact p {
+  width: 150px;
+  padding-left: 60px;
+}
+footer .contact a {
+  border: solid 3px #4CAF50;
+  border-radius: 4%;
+  padding: 4px;
+  display: block;
+  text-decoration: none;
+  color: white;
+  background-color: inherit;
+}
+footer .contact a:hover {
+  background-color: #4CAF50;
+  border: solid 3px #4CAF50;
+}
+footer .contact .contact-1 {
+  float: left;
+}
+footer .contact .contact-2 {
+  float: left;
 }
 }
