--- a/css/style.css
+++ b/css/style.css
@@ -1,53 +1,34 @@
 body {
   margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.top-container {
-  height: 60px;
-  background-color:  #00131a;
-  padding: 0px;
-  color: white;
-}
-.top-container p {
-  float: left;
-  padding: 0 5px 0 5px;
-}
-.top-container .icons {
-  float: right;
-  margin-top: 10px;
-}
-.top-container a {
-  text-decoration: none;
-  color: white;
-}
-.top-container i {
-    padding: 0px 5px;
+  font-family: Arial, serif;
 }
 .header {
-  padding: 10px 16px;
-  background-color: white;
-  color: black;
+  width: 100%;
+  background-color: #4CAF50;
   z-index: 50;
-  font-family: helvetica, sans-serif;
+  position: fixed;
+  border-bottom: solid thin white;
 }
 .header h2 {
   float: left;
-  padding-left: 10%;
+  padding-left: 5%;
 }
 .header a {
   text-decoration: none;
-  color: black;
+  color: white;
 }
 .header nav {
-  float: left;
-  margin: 30px 0 0 20%;
+  float: right;
+  margin: 30px 5% 0 0;
 }
 nav a {
   padding-left: 25px;
 }
 nav a:hover {
   color: green;
+}
+.register:hover {
+  color: red;
 }
 .burger {
   width: 0;
@@ -61,21 +42,62 @@ nav a:hover {
 }
 .content {
   width: 100%;
-  height: 420px;
+  height: 520px;
+  margin-top: 60px;
   float: left;
-  background-image: url(../images/city.jpg);
+  background-image: url(../images/room.jpg);
   background-size: cover;
+  color: #102223;
+}
+.content .col {
+  width: 50%;
+  float: left;
 }
 
-.sticky {
-  position: fixed;
-  top: 0;
+.col p {
+  line-height: 30px;
+  text-align: center;
+  font-size: 20px;
+  padding: 20px;
+  margin-top: 180px;
+  background-color: #4CAF50;
+}
+.content .col-2 {
+  width: 50%;
+  float: left;
+}
+.col-2 form {
+  width: 50%;
+  margin: 100px 15% 0px 35%;
+  padding: 10px;
+  background-color: grey;
+  opacity: 0.8;
+  border-radius: 2%;
+}
+.content input[type=text], select, textarea {
   width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
 }
 
-.sticky + .content {
-  padding-top: 102px;
+.content input[type=submit] {
+  background-color: #4CAF50;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
+
+.content input[type=submit]:hover {
+  background-color: #45a049;
+}
+
 .sec-one {
   width: 80%;
   margin:  10%;
@@ -95,97 +117,75 @@ nav a:hover {
 article {
   width: 100%;
   float: left;
-  background-color: white;
+  background-color: #102223;
 }
 article .company-type {
   width: 100%;
   float: left;
   font-family: Times New Roman;
-  color:  white;
-  background-image: url(../images/room.jpg);
-  background-size: cover;
+  color:  #102223;
 }
 article .company-type .headline {
   width: 100%;
   height: 100px;
-  background-color:  #00131a;
+  background-color:  #4CAF50;
   float: left;
-  font-size: 2em;
-  color: white;
+  font-size: 22px;
+  line-height: 25px;
+  color: #102223;
   text-align: center;
-  border-bottom: solid 1px grey;
+  border-bottom: 1px grey;
 }
 article .company-type .para1 {
   float: left;
-  width: 45%;
+  width: 40%;
+  height: 400px;
   margin: 5% 0 5% 5%;
+  line-height: 20px;
+  padding: 20px;
   font-size: 16px;
-  background-color: #102223;
-  opacity: 0.6;
+  background-color: #4CAF50;
+  opacity: 0.97;
 }
 article .company-type .para2 {
   float: left;
   width: 40%;
+  height: 400px;
   margin: 5% 0 5% 5%;
+  padding: 20px;
+  line-height: 20px;
   font-size: 16px;
-  background-color: #102223;
-  opacity: 0.6;
+  background-color: #4CAF50;
+  opacity: 0.97;
 }
 article .company-type h6 {
   font-size: 25px;
   padding-left: 25px;
   font-family: verdana, sans-serif;
 }
-
-.contact {
+.section {
   width: 100%;
   float: left;
-  background-color: #00131a;
-  color: white;
-}
-.contact .left {
-  width: 50%;
-  height: 500px;
-  float: left;
-}
-.left img {
-  width: 100%;
-  height: 80%;
-  margin: 60px 20px 0 20px;
-  object-fit: contain;
-}
-.left p {
-  line-height: 30px;
-  padding: 0px 0px 0px 56px;
-  font-family: 'Times New Roman', sans-serif;
-}
-.contact .right {
-  width: 40%;
-  float: left;
-  margin: 3% 0 3% 3%;
-}
-.contact input[type=text], select, textarea {
-  width: 100%;
-  padding: 12px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-  margin-top: 6px;
-  margin-bottom: 16px;
-  resize: vertical;
-}
-
-.contact input[type=submit] {
   background-color: #4CAF50;
-  color: white;
-  padding: 12px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
 }
-
-.contact input[type=submit]:hover {
-  background-color: #45a049;
+.section #rec {
+  width: 28%;
+  height: 350px;
+  margin: 50px auto 50px 4.150%;
+  float: left;
+}
+.section #rec .round {
+  width: 150px;
+  height: 150px;
+  margin: 0px 30%;
+  border: solid white;
+  border-radius: 50%;
+}
+.section p {
+  text-align: center;
+  padding: 20px;
+  line-height: 25px;
+  color: white;
 }
 section {
       width: 60%;
@@ -272,11 +272,74 @@ section {
 }
 footer {
   width: 100%;
-  height: 50px;
   float: left;
   background-color: #102223;
   border-top: solid 1px grey;
   text-align: center;
   color: white;
+  font-size: 17px;
+}
+footer .footer-nav {
+  width: 33%;
+  height: 300px;
+  float: left;
+  border-right: solid thin grey;
+}
+footer .footer-nav a {
+  text-decoration: none;
+  display: block;
+  text-align: left;
+  padding: 20px;
+  color: white;
+  font-size: 17px;
+}
+footer .social-media {
+  width: 33%;
+  height: 300px;
+  float: left;
+  border-right: solid thin grey;
+}
+footer .contact {
+  width: 30%;
+  height: 300px;
+  float: right;
+  color: white;
+}
+
+footer .contact p {
+  width: 150px;
+  padding-left: 20px;
+}
+footer .contact a {
+  border: solid 3px #4CAF50;
+  border-radius: 4%;
+  padding: 4px;
+  display: block;
+  text-decoration: none;
+  color: white;
+  background-color: inherit;
+}
+footer .contact a:hover {
+  background-color: #4CAF50;
+  border: solid 3px #4CAF50;
+}
+footer .contact .contact-1 {
+  float: left;
+}
+footer .contact .contact-2 {
+  float: left;
+}
+footer .copyright {
+  width: 100%;
+  height: 40px;
+  float: left;
+  border-top: solid thin grey;
   font-size: 13px;
+}
+footer .copyright a {
+  color: white;
+  text-decoration: none;
+}
+footer .copyright a:hover {
+  color: red;
 }
