--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,9 @@
  	width: 70%;
  	margin-left: 15%;
  }
- .sr-icon-3 {
- 	color: green;
+ #requirements ul li {
+ 	font-size: 18px;
+ 	padding-top: 5px;
  }
  footer {
   width: 100%;
